[gd_scene load_steps=13 format=3 uid="uid://cfy5dp4a3v7on"]

[ext_resource type="Script" path="res://scenes/items_table/SettingsPane.gd" id="1_0nc38"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wi6gs"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j23rn"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wnpw8"]
bg_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmu5d"]
bg_color = Color(0.368627, 0.133333, 0.133333, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8svu"]
bg_color = Color(0.623529, 0.254902, 0.25098, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m3s74"]
bg_color = Color(0.880582, 0.483425, 0.466988, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28533"]
bg_color = Color(0.439216, 0.188235, 0.188235, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7lly7"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 1
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bg7x"]
bg_color = Color(0.211765, 0.211765, 0.211765, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_bottom = 3.0
shadow_size = 1
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmise"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 1
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kyanm"]
bg_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 1
shadow_offset = Vector2(1, 1)

[node name="SettingPane" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nc38")
metadata/_edit_horizontal_guides_ = [16.0]
metadata/_edit_vertical_guides_ = [16.0, 544.0]

[node name="ButtonClose" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 496.0
offset_right = -344.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonRed"
theme_override_styles/normal = SubResource("StyleBoxFlat_wi6gs")
theme_override_styles/hover = SubResource("StyleBoxFlat_j23rn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wnpw8")
text = "Закрыть"

[node name="ButtonClearData" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 352.0
offset_top = 496.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Зажми CTRL+SHIFT!"
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonRed"
theme_override_styles/normal = SubResource("StyleBoxFlat_cmu5d")
theme_override_styles/hover = SubResource("StyleBoxFlat_i8svu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m3s74")
theme_override_styles/disabled = SubResource("StyleBoxFlat_28533")
disabled = true
text = "Удалить все логи!"

[node name="PanelColor" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -288.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"PanelDark"
theme_override_styles/panel = SubResource("StyleBoxFlat_7lly7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelColor"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="LabelTitle" type="Label" parent="PanelColor/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Выделение в списке"
horizontal_alignment = 1

[node name="LabelDescription" type="Label" parent="PanelColor/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "При заданном количестве, предмет будет выделяться одним из цветов."
horizontal_alignment = 1
autowrap_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelColor/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelColor/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="HBoxDefault" type="HBoxContainer" parent="PanelColor/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelColor/VBoxContainer/CenterContainer/VBoxContainer/HBoxDefault"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Норма:"
horizontal_alignment = 2

[node name="ColorPickerDefault" type="ColorPickerButton" parent="PanelColor/VBoxContainer/CenterContainer/VBoxContainer/HBoxDefault"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 32)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="HBoxLow" type="HBoxContainer" parent="PanelColor/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelColor/VBoxContainer/CenterContainer/VBoxContainer/HBoxLow"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Мало:"
horizontal_alignment = 2

[node name="ColorPickerLow" type="ColorPickerButton" parent="PanelColor/VBoxContainer/CenterContainer/VBoxContainer/HBoxLow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 32)
layout_mode = 2
color = Color(0.509804, 0.247059, 0, 1)

[node name="HBoxMin" type="HBoxContainer" parent="PanelColor/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelColor/VBoxContainer/CenterContainer/VBoxContainer/HBoxMin"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Минимум:"
horizontal_alignment = 2

[node name="ColorPickerMin" type="ColorPickerButton" parent="PanelColor/VBoxContainer/CenterContainer/VBoxContainer/HBoxMin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 32)
layout_mode = 2
color = Color(0.439216, 0.188235, 0.188235, 1)

[node name="PanelUpdates" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"PanelDark"
theme_override_styles/panel = SubResource("StyleBoxFlat_7lly7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelUpdates"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="PanelUpdates/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Обновления"
horizontal_alignment = 1

[node name="CheckSearch" type="CheckButton" parent="PanelUpdates/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Поиск при запуске"

[node name="CheckInstall" type="CheckButton" parent="PanelUpdates/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Обновлять при
закрытии"

[node name="ButtonSearchUpdates" type="Button" parent="PanelUpdates/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_5bg7x")
theme_override_styles/hover = SubResource("StyleBoxFlat_jmise")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kyanm")
text = "Проверить обновления"

[node name="LabelVersion" type="Label" parent="PanelUpdates/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Ошибка обновления.
Сервер вернул код {response}"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PanelGroups" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 248.0
offset_right = -16.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"PanelDark"
theme_override_styles/panel = SubResource("StyleBoxFlat_7lly7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelGroups"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelGroups/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Группировка предметов"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelGroups/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelGroups/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="IconListPopup" type="ItemList" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 296.0
offset_top = -386.0
offset_right = 296.0
offset_bottom = -354.0
grow_horizontal = 2
focus_mode = 0
fixed_icon_size = Vector2i(32, 32)
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="IconListPopup"]
modulate = Color(1, 1, 1, 0.823529)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"PanelDarkGray"

[node name="MissClickBlock" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
